minio/minio-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: minio
spec:
  rules:
  - host: minio.od.com
    http:
      paths:
        - path: /
          backend:
            serviceName: minio
            servicePort: 5000
